--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
             <ul>
               <li>
                 <a href="http://127.0.0.1:5500/index.html">Home</a>
-
               </li>
               <li>
                 <a href="about.html">About</a>
@@ -58,14 +57,13 @@
           </div>
         </div>
       </main>
-
-      <footer>
-        <div class="footer">
-          <p>
-            © 2020 John Mwanzia. All Rights Reserved.
-          </p>
-        </div>
-      </footer>
     </div>
+    <footer class="footer">
+      <div>
+        <p>
+          © 2020 John Mwanzia. All Rights Reserved.
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
