--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
           <div class="menu">
             <ul>
               <li>
-                <a href="#">Home</a>
+                <a href="./index.html">Home</a>
               </li>
               <li>
                 <a href="about.html">About</a>
