--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <div class="menu">
             <ul>
               <li>
-                <a href="http://127.0.0.1:5500/index.html">Home</a>
+                <a href="./index.html">Home</a>
               </li>
               <li>
                 <a href="about.html">About</a>
