space page title from the left edge

--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
       </div>
 
       <div class="section">
-        <h1>Contact</h1>
+        <h1  class="home-title">Contact</h1>
       </div>
     </div>
   </body>
