--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
       </div>
 
       <div class="section">
-        <h1>About</h1>
+        <h1  class="home-title">About</h1>
       </div>
     </div>
   </body>
