--- a/blog.html
+++ b/blog.html
@@ -40,7 +40,7 @@
       </div>
 
       <div>
-        <h1>Blog</h1>
+        <h1  class="home-title">Blog</h1>
       </div>
     </div>
   </body>
