--- a/services.html
+++ b/services.html
@@ -40,7 +40,7 @@
       </div>
 
       <div>
-        <h1>Services</h1>
+        <h1  class="home-title">Services</h1>
       </div>
     </div>
   </body>
