--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
         <div class="header">
           <div class="logo">
             <h2>
-              John Mwanzia
+              <a href="./index.html">John Mwanzia</a>
             </h2>
           </div>
 
