create a form validation

--- a/contact.html
+++ b/contact.html
@@ -44,6 +44,19 @@
 
       <div class="section">
         <h1  class="home-title">Contact</h1>
+
+        <div>
+           <h1>Get in touch</h1>
+          <form id="myForm">
+             <div>
+              <input type="text" name="name" id="nameField" placeholder="Name..." required>
+              <input type="email" name="email" id="emailField" placeholder="Email..." required>
+             </div>
+            <textarea name="message" id="messageField" placeholder="Your message..." cols="10"></textarea>
+            <button type="submit">Submit</button>
+          </form>
+          
+        </div>
       </div>
     </div>
   </body>
