remove cols span in text area

--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
               <input type="text" name="name" id="nameField" placeholder="Name..." required>
               <input type="email" name="email" id="emailField" placeholder="Email..." required>
              </div>
-            <textarea name="message" id="messageField" placeholder="Your message..." cols="10"></textarea>
+            <textarea name="message" id="messageField" placeholder="Your message..."></textarea>
             <button type="submit">Submit</button>
           </form>
           
