--- a/contact.html
+++ b/contact.html
@@ -43,9 +43,8 @@
       </div>
 
       <div class="section">
-        <h1  class="home-title">Contact</h1>
-
-        <div>
+      
+        <div class="contact-wrapper">
            <h1>Get in touch</h1>
           <form id="myForm">
              <div>
@@ -53,7 +52,7 @@
               <input type="email" name="email" id="emailField" placeholder="Email..." required>
              </div>
             <textarea name="message" id="messageField" placeholder="Your message..."></textarea>
-            <button type="submit">Submit</button>
+            <button type="submit" id="btn">Submit</button>
           </form>
           
         </div>
