finish up contact  page

--- a/contact.html
+++ b/contact.html
@@ -47,12 +47,14 @@
         <div class="contact-wrapper">
            <h1>Get in touch</h1>
           <form id="myForm">
-             <div>
+             <div class="input-fields">
               <input type="text" name="name" id="nameField" placeholder="Name..." required>
               <input type="email" name="email" id="emailField" placeholder="Email..." required>
              </div>
             <textarea name="message" id="messageField" placeholder="Your message..."></textarea>
-            <button type="submit" id="btn">Submit</button>
+            <div>
+              <button type="submit" id="btn">Submit</button>
+            </div>
           </form>
           
         </div>
