add footer to contact page

--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,13 @@
         </div>
       </div>
     </div>
-
+    <footer class="footer">
+      <div>
+        <p>
+          © 2020 John Mwanzia. All Rights Reserved.
+        </p>
+      </div> 
+    </footer>
     <script src="index.js"></script>
   </body>
 </html>
