add footer to contact page

--- a/about.html
+++ b/about.html
@@ -44,6 +44,13 @@
       <div class="section">
         <h1  class="home-title">About</h1>
       </div>
+      <footer class="footer">
+        <div>
+          <p>
+            © 2020 John Mwanzia. All Rights Reserved.
+          </p>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
