--- a/blog.html
+++ b/blog.html
@@ -42,6 +42,13 @@
       <div>
         <h1  class="home-title">Blog</h1>
       </div>
+      <footer class="footer">
+        <div>
+          <p>
+            © 2020 John Mwanzia. All Rights Reserved.
+          </p>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
