--- a/services.html
+++ b/services.html
@@ -42,6 +42,14 @@
       <div>
         <h1  class="home-title">Services</h1>
       </div>
+      <footer class="footer">
+        <div>
+          <p>
+            © 2020 John Mwanzia. All Rights Reserved.
+          </p>
+        </div>
+      </footer>
+
     </div>
   </body>
 </html>
