--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
               <input type="text" name="name" id="nameField" placeholder="Name..." required>
               <input type="email" name="email" id="emailField" placeholder="Email..." required>
              </div>
-            <textarea name="message" id="messageField" placeholder="Your message..."></textarea>
+            <textarea name="message" id="messageField" placeholder="Your Message..."></textarea>
             <div>
               <button type="submit" id="btn">Submit</button>
             </div>
