--- a/index.html
+++ b/index.html
@@ -1,110 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <div class="Header" style="width: 1440px; height: 819px; padding-top: 32px; padding-bottom: 76px; padding-left: 135px; padding-right: 70px; justify-content: flex-end; align-items: center; display: inline-flex">
-    <div class="Header" style="width: 1235px; height: 711px; position: relative">
-      <div class="HeaderContent" style="width: 578px; height: 542px; left: 0px; top: 165px; position: absolute">
-        <div class="OrderProcess" style="width: 224px; height: 70px; left: 220px; top: 472px; position: absolute">
-          <div class="OrderProcess" style="left: 86px; top: 25px; position: absolute; color: #363636; font-size: 20px; font-family: Poppins; font-weight: 500; line-height: 20px; word-wrap: break-word">Order Process</div>
-          <div class="ButtonPlay" style="width: 70px; height: 70px; left: 0px; top: 0px; position: absolute">
-            <div class="Ellipse2" style="width: 70px; height: 70px; left: 0px; top: 0px; position: absolute; background: white; box-shadow: 0px 20px 49px -10px rgba(0, 0, 0, 0.08); border-radius: 9999px"></div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Grocer</title>
+  </head>
+  <body>
+    <nav>
+      <div class="nav__wrapper">
+        <div class="logo">
+          <a href="index.html">
+             <img src="public\images\logo.svg" alt="logo" />
+          </a>
+        </div>
+        <div class="nav-links">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="products.html">Menu</a></li>
+            <li><a href="about.html">Service</a></li>
+            <li><a href="about.html">Shop</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            
+          </ul>
+        </div>
+        <div class="search-cart">
+          <div class="search">
+            <input type="text" placeholder="Search" />
+            <a href="#"><img src="public\images\icon.svg" alt="search" /></a>
           </div>
-        </div>
-        <div class="Group1713" style="width: 186px; height: 70px; left: 0px; top: 472px; position: absolute">
-          <div class="Rectangle668" style="width: 186px; height: 70px; left: 0px; top: 0px; position: absolute; background: #F86061; border-radius: 12px"></div>
-          <div class="OrderNow" style="left: 40px; top: 25px; position: absolute; text-align: center; color: #FFFAFA; font-size: 20px; font-family: Poppins; font-weight: 500; line-height: 20px; word-wrap: break-word">Order Now</div>
-        </div>
-        <div class="GrocenAtssuresFreshGroceryEveryMorningToYourFamilyWithoutGettingOutInThisPandemic" style="width: 478px; left: 0px; top: 352px; position: absolute; color: #676767; font-size: 18px; font-family: Poppins; font-weight: 400; line-height: 30px; letter-spacing: 0.09px; word-wrap: break-word">Grocen atssures fresh grocery every morning to your family without getting out in this pandemic.</div>
-        <div class="GroceriesDeliveredInAsLittleAs2Hours" style="width: 578px; left: 0px; top: 66px; position: absolute"><span style="color: #2E2E2E; font-size: 74px; font-family: Poppins; font-weight: 700; line-height: 88px; word-wrap: break-word">Groceries delivered in as little as </span><span style="color: #F54748; font-size: 74px; font-family: Poppins; font-weight: 500; line-height: 88px; word-wrap: break-word">2</span><span style="color: #F54748; font-size: 74px; font-family: Poppins; font-weight: 500; line-height: 88px; word-wrap: break-word"> </span><span style="color: #F54748; font-size: 74px; font-family: Poppins; font-weight: 500; line-height: 88px; word-wrap: break-word">hours</span></div>
-        <div class="Group" style="width: 214px; height: 46px; left: 0px; top: 0px; position: absolute">
-          <div class="Fill" style="width: 214px; height: 46px; left: 0px; top: 0px; position: absolute; background: #FDECEC; border-radius: 23px"></div>
-          <div class="MoreThanFaster" style="left: 20px; top: 15px; position: absolute; color: #F55556; font-size: 16px; font-family: Poppins; font-weight: 500; line-height: 16px; word-wrap: break-word">More than Faster</div>
-          <img class="Image" style="width: 26px; height: 24px; left: 168px; top: 11px; position: absolute; box-shadow: 0px 12px 20px rgba(224, 25, 35, 0.20)" src="https://via.placeholder.com/26x24" />
-        </div>
-      </div>
-      <div class="Navigation" style="width: 1170px; height: 67px; left: 0px; top: 0px; position: absolute">
-        <div class="SearchBar" style="width: 300px; height: 67px; left: 870px; top: 0px; position: absolute">
-          <div class="Fill" style="width: 289px; height: 54px; left: 0px; top: 13px; position: absolute; background: white; box-shadow: 0px 20px 50px rgba(0, 0, 0, 0.04); border-radius: 8px"></div>
-          <div class="Number" style="width: 28px; height: 28px; left: 272px; top: 0px; position: absolute">
-            <div class="Fill" style="width: 28px; height: 28px; left: 0px; top: 0px; position: absolute; background: #F54B4B; box-shadow: -6px 9px 24px -6px rgba(238, 67, 67, 0.68); border-radius: 9999px"></div>
-            <div style="left: 10px; top: 7px; position: absolute; color: #FFFDFD; font-size: 14px; font-family: Poppins; font-weight: 600; line-height: 14px; letter-spacing: 0.07px; word-wrap: break-word">2</div>
-          </div>
-          <div class="Icon" style="width: 24px; height: 24px; left: 245px; top: 26px; position: absolute">
-            <div class="Group1000002450" style="width: 22px; height: 19.20px; left: 1px; top: 3.29px; position: absolute">
-              <div class="Vector" style="width: 22px; height: 12.99px; left: 0px; top: 6.22px; position: absolute; background: #3C3737"></div>
-              <div class="Vector" style="width: 13px; height: 7.21px; left: 4.50px; top: 0px; position: absolute; border: 1px #3C3737 solid"></div>
-            </div>
-          </div>
-          <div class="Line1" style="width: 27px; height: 0px; left: 229px; top: 26px; position: absolute; transform: rotate(90deg); transform-origin: 0 0; border: 0.75px #F2F2F2 solid"></div>
-          <div class="Search" style="width: 74px; height: 16px; left: 20px; top: 32px; position: absolute">
-            <div class="Search" style="left: 24px; top: 0px; position: absolute; color: #232323; font-size: 14px; font-family: Poppins; font-weight: 500; line-height: 14px; word-wrap: break-word">Search</div>
-            <div class="Icon" style="width: 15.45px; height: 16px; left: 0px; top: 0px; position: absolute; background: #8B8B8B"></div>
-          </div>
-        </div>
-        <div class="Menu" style="width: 312px; height: 24px; left: 429px; top: 28px; position: absolute">
-          <div class="Service" style="left: 173px; top: 0px; position: absolute; text-align: center; color: #4D4D4D; font-size: 16px; font-family: Poppins; font-weight: 500; word-wrap: break-word">Service</div>
-          <div class="Shop" style="left: 270px; top: 0px; position: absolute; text-align: center; color: #4D4D4D; font-size: 16px; font-family: Poppins; font-weight: 500; word-wrap: break-word">Shop</div>
-          <div class="Menu" style="left: 88px; top: 0px; position: absolute; text-align: center; color: #4D4D4D; font-size: 16px; font-family: Poppins; font-weight: 500; word-wrap: break-word">Menu</div>
-          <div class="Home" style="left: 0px; top: 0px; position: absolute; text-align: center; color: #F55253; font-size: 16px; font-family: Poppins; font-weight: 600; word-wrap: break-word">Home</div>
-        </div>
-        <div class="Logo" style="width: 154.90px; height: 41.58px; left: 0px; top: 19px; position: absolute">
-          <div class="Grover" style="width: 106.22px; height: 20.65px; left: 48.68px; top: 10px; position: absolute; background: #2E2E2E"></div>
-          <div class="GLogo" style="width: 41.58px; height: 41.58px; left: 0px; top: 0px; position: absolute">
-            <div class="Ellipse2708" style="width: 41.58px; height: 41.58px; left: 0px; top: 0px; position: absolute; background: linear-gradient(133deg, #FF5E5F 0%, #F54748 100%); border-radius: 8px"></div>
-            <div class="Ellipse2706" style="width: 3.38px; height: 3.71px; left: 17.45px; top: 30.44px; position: absolute; background: white"></div>
-            <div class="Ellipse2707" style="width: 3.38px; height: 3.71px; left: 24.89px; top: 30.44px; position: absolute; background: white"></div>
-            <div class="Subtract" style="width: 18.56px; height: 21.56px; left: 9.65px; top: 7.43px; position: absolute; background: white"></div>
+          <div class="cart">
+            <a href="#"><img src="public\images\cart.svg" alt="cart" /></a>
           </div>
         </div>
       </div>
-      <div class="HeaderImage" style="width: 619px; height: 605px; left: 616px; top: 106px; position: absolute">
-        <div class="Abstract" style="width: 97.40px; height: 156.02px; left: 479.62px; top: 212.87px; position: absolute; transform: rotate(-8.37deg); transform-origin: 0 0">
-          <div class="Stroke" style="width: 97.40px; height: 130.78px; left: 3.67px; top: 24.96px; position: absolute; transform: rotate(-8.37deg); transform-origin: 0 0; border: 1.50px #E0E0E0 dotted"></div>
-          <div class="Icon" style="width: 29.67px; height: 28.17px; left: 60.40px; top: -8.89px; position: absolute; transform: rotate(-1.84deg); transform-origin: 0 0; background: #E0E0E0; border-radius: 2px"></div>
-        </div>
-        <div class="Image" style="width: 417px; height: 605px; left: 141px; top: 0px; position: absolute">
-          <div class="Fill" style="width: 417px; height: 312px; left: 0px; top: 293px; position: absolute; background: #F9B944; border-radius: 24px"></div>
-          <div class="Stroke" style="width: 417px; height: 301.40px; left: 0px; top: 299.44px; position: absolute; opacity: 0.50; background: white"></div>
-          <div class="Mask" style="width: 417px; height: 605px; left: 0px; top: 0px; position: absolute; background: #F54748"></div>
-          <img class="Image" style="width: 323px; height: 547px; left: 49px; top: 44px; position: absolute" src="https://via.placeholder.com/323x547" />
-        </div>
-        <div class="Card01" style="width: 182px; height: 272px; left: 0px; top: 106px; position: absolute">
-          <div class="Fill" style="width: 182px; height: 235px; left: 0px; top: 13px; position: absolute; background: white; box-shadow: 0px 50px 80px rgba(0, 0, 0, 0.08); border-radius: 12px"></div>
-          <div class="Icon" style="width: 48px; height: 48px; left: 67px; top: 224px; position: absolute">
-            <div class="Fill" style="width: 48px; height: 48px; left: 0px; top: 0px; position: absolute; background: linear-gradient(180deg, #FF7071 0%, #E73D3E 100%); box-shadow: 0px -6px 40px rgba(235, 69, 70, 0.20); border-radius: 10px"></div>
-            <div class="Icon" style="width: 21.58px; height: 20.83px; left: 13px; top: 13px; position: absolute">
-              <div class="Vector" style="width: 2.70px; height: 2.70px; left: 7.61px; top: 18.14px; position: absolute; background: white"></div>
-              <div class="Vector" style="width: 2.70px; height: 2.70px; left: 15.17px; top: 18.14px; position: absolute; background: white"></div>
-              <div class="Vector" style="width: 21.58px; height: 16.79px; left: 0px; top: 0px; position: absolute; background: white"></div>
-            </div>
-          </div>
-          <img class="Image" style="width: 101px; height: 88px; left: 40px; top: 0px; position: absolute; box-shadow: 0px 40px 50px -25px rgba(231.63, 122.68, 0, 0.30)" src="https://via.placeholder.com/101x88" />
-          <div class="Info" style="width: 82px; height: 76px; left: 50px; top: 118px; position: absolute">
-            <div class="4460" style="left: 2px; top: 40px; position: absolute; text-align: center; color: #2E2E2E; font-size: 22px; font-family: Poppins; font-weight: 700; line-height: 20px; word-wrap: break-word">$44.60</div>
-            <div class="FreeShipping" style="left: 7px; top: 66px; position: absolute; text-align: center; color: #A5A5A5; font-size: 10px; font-family: Poppins; font-weight: 500; line-height: 10px; word-wrap: break-word">Free Shipping</div>
-            <div class="FreshOrenge" style="left: 0px; top: 0px; position: absolute; text-align: center; color: #2E2E2E; font-size: 12px; font-family: Poppins; font-weight: 600; word-wrap: break-word">Fresh Orenge</div>
-            <div class="Rectangle672" style="width: 20px; height: 2px; left: 30px; top: 22px; position: absolute; background: #FFA610; border-radius: 1px"></div>
-          </div>
-        </div>
-        <div class="Card02" style="width: 160px; height: 74px; left: 459px; top: 106px; position: absolute">
-          <div class="Fill" style="width: 160px; height: 74px; left: 0px; top: 0px; position: absolute; background: white; box-shadow: 0px 40px 70px -10px rgba(0, 0, 0, 0.08); border-radius: 12px"></div>
-          <div class="Delivary30Min" style="width: 68px; left: 72px; top: 16px; position: absolute"><span style="color: #404040; font-size: 16px; font-family: Poppins; font-weight: 600; line-height: 20px; word-wrap: break-word">Delivary </span><span style="color: #A5A4A4; font-size: 12px; font-family: Poppins; font-weight: 500; line-height: 20px; word-wrap: break-word">30 Min</span></div>
-          <div class="AlarmClockIcon" style="width: 34px; height: 34px; left: 54px; top: 20px; position: absolute; transform: rotate(180deg); transform-origin: 0 0">
-            <div class="Vector" style="width: 25.93px; height: 25.93px; left: 4.03px; top: 5.11px; position: absolute; background: #03A66B"></div>
-            <div class="Vector" style="width: 6.66px; height: 8.07px; left: 15.12px; top: 11.97px; position: absolute; background: #03A66B"></div>
-            <div class="Vector" style="width: 5.88px; height: 6.27px; left: 4.86px; top: 26.19px; position: absolute; background: #03A66B"></div>
-            <div class="Vector" style="width: 5.88px; height: 6.27px; left: 23.27px; top: 26.19px; position: absolute; background: #03A66B"></div>
-            <div class="Vector" style="width: 10.50px; height: 10.46px; left: -0px; top: 1.54px; position: absolute; background: #03A66B"></div>
-            <div class="Vector" style="width: 10.50px; height: 10.46px; left: 23.50px; top: 1.54px; position: absolute; background: #03A66B"></div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</body>
+    </nav>
+  </body>
 </html>
