--- a/index.html
+++ b/index.html
@@ -4,13 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Grocer</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400&family=Poppins:wght@200;300&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
     <nav>
       <div class="nav__wrapper">
         <div class="logo">
           <a href="index.html">
-             <img src="public\images\logo.svg" alt="logo" />
+            <img src="public\images\logo.svg" alt="logo" />
           </a>
         </div>
         <div class="nav-links">
@@ -20,16 +33,15 @@
             <li><a href="about.html">Service</a></li>
             <li><a href="about.html">Shop</a></li>
             <li><a href="contact.html">Contact</a></li>
-            
           </ul>
         </div>
         <div class="search-cart">
           <div class="search">
             <input type="text" placeholder="Search" />
-            <a href="#"><img src="public\images\icon.svg" alt="search" /></a>
+            <a href="#"><img src="public\images\icon.svg" alt="search"/></a>
           </div>
           <div class="cart">
-            <a href="#"><img src="public\images\cart.svg" alt="cart" /></a>
+            <a href="#"><img src="public\images\cart.svg" alt="cart"/></a>
           </div>
         </div>
       </div>
