--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
-    <nav>
+    <nav class="nav__container">
       <div class="nav__wrapper">
         <div class="logo">
           <a href="index.html">
@@ -28,7 +28,7 @@
         </div>
         <div class="nav-links">
           <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html" class="home__link">Home</a></li>
             <li><a href="products.html">Menu</a></li>
             <li><a href="about.html">Service</a></li>
             <li><a href="about.html">Shop</a></li>
@@ -37,8 +37,10 @@
         </div>
         <div class="search-cart">
           <div class="search">
-            <input type="text" placeholder="Search" />
-            <a href="#"><img src="public\images\icon.svg" alt="search"/></a>
+            <input type="text" class="search__input" placeholder="Search" />
+            <button class="search-icon">
+            <img  src="public\images\icon.svg" alt="search"/>
+            </button>
           </div>
           <div class="cart">
             <a href="#"><img src="public\images\cart.svg" alt="cart"/></a>
