add hero intro feature

--- a/index.html
+++ b/index.html
@@ -19,34 +19,44 @@
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
-    <nav class="nav__container">
-      <div class="nav__wrapper">
-        <div class="logo">
-          <a href="index.html">
-            <img src="public\images\logo.svg" alt="logo" />
-          </a>
-        </div>
-        <div class="nav-links">
-          <ul>
-            <li><a href="index.html" class="home__link">Home</a></li>
-            <li><a href="products.html">Menu</a></li>
-            <li><a href="about.html">Service</a></li>
-            <li><a href="about.html">Shop</a></li>
-            <li><a href="contact.html">Contact</a></li>
-          </ul>
-        </div>
-        <div class="search-cart">
-          <div class="search">
-            <input type="text" class="search__input" placeholder="Search" />
-            <button class="search-icon">
-            <img  src="public\images\icon.svg" alt="search"/>
-            </button>
+    <div class="container">
+      <nav class="nav__container">
+        <div class="nav__wrapper">
+          <div class="logo">
+            <a href="index.html">
+              <img src="public\images\logo.svg" alt="logo" />
+            </a>
           </div>
-          <div class="cart">
-            <a href="#"><img src="public\images\cart.svg" alt="cart"/></a>
+          <div class="nav-links">
+            <ul>
+              <li><a href="index.html" class="home__link">Home</a></li>
+              <li><a href="products.html">Menu</a></li>
+              <li><a href="about.html">Service</a></li>
+              <li><a href="about.html">Shop</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
           </div>
+          <div class="search-cart">
+            <div class="search">
+              <input type="text" class="search__input" placeholder="Search" />
+              <button class="search-icon">
+                <img src="public\images\icon.svg" alt="search" />
+              </button>
+            </div>
+            <div class="cart">
+              <a href="#"><img src="public\images\cart.svg" alt="cart"/></a>
+            </div>
+          </div>
+        </div>
+      </nav>
+      <div class="intro-feature">
+        <p>
+          More than Faster
+        </p>
+        <div>
+          <img class="pear" src="public\images\pear.svg" alt="" />
         </div>
       </div>
-    </nav>
+    </div>
   </body>
 </html>
