finish up the hero section

--- a/index.html
+++ b/index.html
@@ -49,12 +49,46 @@
           </div>
         </div>
       </nav>
-      <div class="intro-feature">
-        <p>
-          More than Faster
-        </p>
-        <div>
-          <img class="pear" src="public\images\pear.svg" alt="" />
+      
+      <div class="hero-section">
+        <div class="right-hero-section">
+          <div class="intro-feature">
+            <p>
+              More than Faster
+            </p>
+            <div>
+              <img class="pear" src="public\images\pear.svg" alt="" />
+            </div>
+          </div>
+          <div class="hero-text">
+            <div>
+              <h1 class="hero-large-text">
+                Groceries <br />
+                delivered in as <br />
+                little as <span class="red-text">2 hours</span>
+              </h1>
+            </div>
+            <div>
+              <p class="light-text">
+                Grocen atssures fresh grocery every morning to your family without
+                getting out in this pandemic.
+              </p>
+            </div>                           
+          </div>
+          <div class="call-to-action">
+            <button class="order-button">Order Now</button>
+             <div class="play">
+              <div class="play-button">
+                <button class="play-wrapper">
+                  <img class="play-button" src="public\images\button-play.png" alt="play-button" />
+                </button>
+              </div>
+              <h2>Order Process</h2>
+             </div>
+          </div>
+        </div>
+        <div class="hero-image">
+          <img src="public\images\heero-image.png" alt="hero-image" />
         </div>
       </div>
     </div>
