remove spacing for hero section content

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </div>
             <div>
               <p class="light-text">
-                Grocen atssures fresh grocery every morning to your family without
+                Grocen atssures fresh grocery every morning to your <br /> family without
                 getting out in this pandemic.
               </p>
             </div>                           
