--- a/index.html
+++ b/index.html
@@ -92,5 +92,42 @@
         </div>
       </div>
     </div>
+    <div class="fetures">
+        <div>
+            <p>What we Serve</p>
+        </div>
+        <div>
+           <h2>fruit and vegetable delivered <br /> to your home</h2>
+        </div>
+        <div class="features__wrapper">
+            <div class="feature__item">
+                <div class="feature__image">
+                    <img src="public\images\feature-1.svg" alt="feature-1" />
+                </div>
+                <div class="feature__text">
+                    <h3>Free shipping</h3>
+                    <p>Enjoy Order in a hand using the <br /> fresness of groceries</p>
+                </div>
+            </div>
+            <div class="feature__item">
+                <div class="feature__image">
+                    <img src="public\images\feature-2.svg" alt="feature-2" />
+                </div>
+                <div class="feature__text">
+                    <h3>100% Organic</h3>
+                    <p>Get your healthy foods & snacks delivered <br /> at your doorsteps all day everyday.</p>
+                </div>
+            </div>
+            <div class="feature__item">
+                <div class="feature__image">
+                    <img src="public\images\feature-3.svg" alt="feature-3" />
+                </div>
+                <div class="feature__text">
+                    <h3>Secure checkout</h3>
+                    <p>If you get rotten items - return <br /> immediately to us.</p>
+                </div>
+            </div>          
+        </div>
+    </div>
   </body>
 </html>
