--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400&family=Poppins:wght@200;300&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
@@ -49,7 +55,7 @@
           </div>
         </div>
       </nav>
-      
+
       <div class="hero-section">
         <div class="right-hero-section">
           <div class="intro-feature">
@@ -70,21 +76,25 @@
             </div>
             <div>
               <p class="light-text">
-                Grocen atssures fresh grocery every morning to your <br /> family without
-                getting out in this pandemic.
+                Grocen atssures fresh grocery every morning to your <br />
+                family without getting out in this pandemic.
               </p>
-            </div>                           
+            </div>
           </div>
           <div class="call-to-action">
             <button class="order-button">Order Now</button>
-             <div class="play">
+            <div class="play">
               <div class="play-button">
                 <button class="play-wrapper">
-                  <img class="play-button" src="public\images\button-play.png" alt="play-button" />
+                  <img
+                    class="play-button"
+                    src="public\images\button-play.png"
+                    alt="play-button"
+                  />
                 </button>
               </div>
               <h2>Order Process</h2>
-             </div>
+            </div>
           </div>
         </div>
         <div class="hero-image">
@@ -92,42 +102,56 @@
         </div>
       </div>
     </div>
-    <div class="fetures">
-        <div>
-            <p>What we Serve</p>
+    <div class="features">
+      <div class="feature-container">
+        <div class="feature__intro">
+          <p>What we Serve</p>
         </div>
-        <div>
-           <h2>fruit and vegetable delivered <br /> to your home</h2>
+        <div class="feature__intro">
+          <h2>
+            fruit and vegetable delivered <br />
+            to your home
+          </h2>
         </div>
         <div class="features__wrapper">
-            <div class="feature__item">
-                <div class="feature__image">
-                    <img src="public\images\feature-1.svg" alt="feature-1" />
-                </div>
-                <div class="feature__text">
-                    <h3>Free shipping</h3>
-                    <p>Enjoy Order in a hand using the <br /> fresness of groceries</p>
-                </div>
+          <div class="feature__item">
+            <div class="feature__image">
+              <img src="public\images\feature-1.svg" alt="feature-1" />
             </div>
-            <div class="feature__item">
-                <div class="feature__image">
-                    <img src="public\images\feature-2.svg" alt="feature-2" />
-                </div>
-                <div class="feature__text">
-                    <h3>100% Organic</h3>
-                    <p>Get your healthy foods & snacks delivered <br /> at your doorsteps all day everyday.</p>
-                </div>
+            <div class="feature__text">
+              <h3>Free shipping</h3>
+              <p>
+                Enjoy Order in a hand using the <br />
+                fresness of groceries
+              </p>
             </div>
-            <div class="feature__item">
-                <div class="feature__image">
-                    <img src="public\images\feature-3.svg" alt="feature-3" />
-                </div>
-                <div class="feature__text">
-                    <h3>Secure checkout</h3>
-                    <p>If you get rotten items - return <br /> immediately to us.</p>
-                </div>
-            </div>          
+          </div>
+          <div class="feature__item">
+            <div class="feature__image">
+              <img src="public\images\feature-2.svg" alt="feature-2" />
+            </div>
+            <div class="feature__text">
+              <h3>100% Organic</h3>
+              <p>
+                Get your healthy foods & snacks <br />
+                delivered at your doorsteps
+              </p>
+            </div>
+          </div>
+          <div class="feature__item">
+            <div class="feature__image">
+              <img src="public\images\feature-3.svg" alt="feature-3" />
+            </div>
+            <div class="feature__text">
+              <h3>Secure checkout</h3>
+              <p>
+                If you get rotten items - return <br />
+                immediately to us.
+              </p>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
   </body>
 </html>
