finish up the featires section

--- a/index.html
+++ b/index.html
@@ -126,16 +126,19 @@
               </p>
             </div>
           </div>
-          <div class="feature__item">
-            <div class="feature__image">
-              <img src="public\images\feature-2.svg" alt="feature-2" />
-            </div>
-            <div class="feature__text">
-              <h3>100% Organic</h3>
-              <p>
-                Get your healthy foods & snacks <br />
-                delivered at your doorsteps
-              </p>
+          <div class="skewed">
+            <div class="feature__item" id="middle__box">
+              <div class="feature__image">
+                <img src="public\images\feature-2.svg" alt="feature-2" />
+              </div>
+              <div class="feature__text">
+                <h3>100% Organic</h3>
+                <p>
+                  Get your healthy foods & snacks <br />
+                  delivered at your doorsteps
+                </p>
+              </div>
+              <div class="skewed__box"></div>
             </div>
           </div>
           <div class="feature__item">
