--- a/index.html
+++ b/index.html
@@ -156,5 +156,19 @@
         </div>
       </div>
     </div>
+
+    <div class="why__choose">
+      <div class="right__image"></div>
+      <div class="why__choose__text">
+        <h1>Why Choose Us?.</h1>
+        <div>
+          Freshness Delivered: Enjoy premium quality fruits and vegetables straight to your doorstep, sourced for ultimate freshness.
+
+          Organic & Healthy Choices: Elevate your well-being with 100% organic and nutritious foods, delivered hassle-free.
+          
+          Fast & Reliable Service: Experience the convenience of 2-hour delivery and secure checkout for a seamless shopping journey.
+        </div>
+      </div>
+    </div>
   </body>
 </html>
