--- a/index.html
+++ b/index.html
@@ -158,7 +158,9 @@
     </div>
 
     <div class="why__choose">
-      <div class="right__image"></div>
+      <div class="right__image">
+        <img src="public\images\choose-us.png" alt="why-choose" />
+      </div>
       <div class="why__choose__text">
         <h1>Why Choose Us?.</h1>
         <div>
