add br tag to the delivery section intro title

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         </div>
         <div class="intro__title">
           <h3>
-            Sit at Home We Will Take Care Your Order
+            Sit at Home We Will <br/> Take Care Your Order
           </h3>
         </div>
         <div class="delivery__body__text">
