--- a/index.html
+++ b/index.html
@@ -338,5 +338,8 @@
         </div>
       </div>
     </footer> -->
+
+    <!-- Scripts -->
+    <script src="index.js"></script>
   </body>
 </html>
